--- a/responsive.css
+++ b/responsive.css
@@ -97,4 +97,11 @@
 	}
 }
 
+/* Less than 685px */
+@media only screen and (max-width: 685px) {
+	#social-share {
+		display: none;
+	}
+}
+
 
